[gd_scene load_steps=20 format=3 uid="uid://cc8knt7ggr72s"]

[ext_resource type="Texture2D" uid="uid://bij0i4ko1fp4r" path="res://card/textures/background_frame.png" id="1"]
[ext_resource type="Script" path="res://card/card.gd" id="2"]
[ext_resource type="Script" path="res://card/states/card_state_machine.gd" id="3"]
[ext_resource type="Script" path="res://card/states/card_idle.gd" id="4"]
[ext_resource type="Script" path="res://card/states/card_return.gd" id="5"]
[ext_resource type="Script" path="res://card/states/card_play.gd" id="6"]
[ext_resource type="Script" path="res://card/states/card_draw.gd" id="7"]
[ext_resource type="Resource" path="res://resources/cards/tower_red/red_tower_card.tres" id="8"]
[ext_resource type="Script" path="res://card/states/card_inactive.gd" id="9"]
[ext_resource type="Resource" path="res://card/card_events.tres" id="10"]
[ext_resource type="Texture2D" uid="uid://b41bay2ovukum" path="res://card/textures/cost_frame.png" id="11"]
[ext_resource type="Texture2D" uid="uid://bn4ml40n7dqcu" path="res://card/textures/description_frame.png" id="12"]
[ext_resource type="Texture2D" uid="uid://d081clexolmeo" path="res://card/textures/name_frame.png" id="13"]
[ext_resource type="Texture2D" uid="uid://cd3el6mxg2ci6" path="res://card/textures/foreground_frame.png" id="14"]
[ext_resource type="Texture2D" uid="uid://5bgincnel8i1" path="res://card/textures/rarity_frame.png" id="15"]
[ext_resource type="Theme" uid="uid://w7yk87i8qd5d" path="res://game_ui/game_ui_theme.tres" id="17"]
[ext_resource type="PackedScene" path="res://card/card_debug_panel.tscn" id="18"]
[ext_resource type="Texture2D" uid="uid://bl5omfx1acxku" path="res://card/textures/card_selected.png" id="19"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(203.75, 287.5)

[node name="Card" type="Area2D"]
position = Vector2(968, 497)
scale = Vector2(0.8, 0.8)
collision_layer = 256
collision_mask = 512
script = ExtResource("2")
resource = ExtResource("8")
card_events = ExtResource("10")

[node name="Selected" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("19")

[node name="BackgroundFrame" type="Sprite2D" parent="."]
texture = ExtResource("1")

[node name="ForegroundFrame" type="Sprite2D" parent="."]
position = Vector2(0, -87)
texture = ExtResource("14")

[node name="NameFrame" type="Sprite2D" parent="."]
position = Vector2(0, -7)
texture = ExtResource("13")

[node name="NameLabel" type="RichTextLabel" parent="NameFrame"]
modulate = Color(0, 0, 0, 1)
offset_left = -64.0
offset_top = -8.0
offset_right = 64.0
offset_bottom = 8.0
mouse_filter = 2
theme = ExtResource("17")
text = "Name"
visible_characters = 17
visible_ratio = 4.25

[node name="CostFrame" type="Sprite2D" parent="."]
position = Vector2(-88, -143)
texture = ExtResource("11")

[node name="CostLabel" type="RichTextLabel" parent="CostFrame"]
modulate = Color(0, 0, 0, 1)
offset_left = -16.0
offset_top = -8.0
offset_right = 16.0
offset_bottom = 7.0
mouse_filter = 2
theme = ExtResource("17")
bbcode_enabled = true
text = "5"

[node name="DescriptionFrame" type="Sprite2D" parent="."]
modulate = Color(1, 0.886275, 0.643137, 1)
position = Vector2(0, 78)
texture = ExtResource("12")

[node name="DescriptionLabel" type="RichTextLabel" parent="DescriptionFrame"]
modulate = Color(0, 0, 0, 1)
offset_left = -75.0
offset_top = -48.0
offset_right = 74.0
offset_bottom = 48.0
mouse_filter = 2
text = "Description"

[node name="RarityFrame" type="Sprite2D" parent="."]
position = Vector2(0, 15)
texture = ExtResource("15")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3")
initial_state = NodePath("Inactive")

[node name="Inactive" type="Node" parent="StateMachine"]
script = ExtResource("9")

[node name="Draw" type="Node" parent="StateMachine"]
script = ExtResource("7")
card_events = ExtResource("10")
card_path = NodePath("../..")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4")
card_events = ExtResource("10")
card_path = NodePath("../..")

[node name="Return" type="Node" parent="StateMachine"]
script = ExtResource("5")
card_events = ExtResource("10")
card_path = NodePath("../..")

[node name="Play" type="Node" parent="StateMachine"]
script = ExtResource("6")
card_events = ExtResource("10")
root_path = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.625, 1.25)
scale = Vector2(1, 1)
shape = SubResource("1")

[node name="DebugPanel" parent="." instance=ExtResource("18")]
layout_mode = 3
offset_left = -47.5
offset_top = -166.25
offset_right = -45.5
offset_bottom = -166.21
state_machine_path = NodePath("../StateMachine")

[connection signal="mouse_entered" from="." to="." method="_on_Card_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Card_mouse_exited"]
